Update service base code